bluec-tests/tests/invalid/expr_alignof/alignof_type_no_parens.c
int main(void) {
    return _Alignof int;
}